Closed Bug 1722673 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::dom::PWindowGlobalParent::SendDrawSnapshot]

Categories

(Core :: DOM: Content Processes, defect, P2)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Fission Milestone M8
Tracking Status
firefox-esr78 --- unaffected
firefox90 --- unaffected
firefox91 --- unaffected
firefox92 --- fixed

People

(Reporter: aryx, Assigned: hiro)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: fission-soft-blocker)

Crash Data

Attachments

(1 file)

10 crashes from 6 installations since 92.0a1 20210727094543 got released.

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/262124d8-19dd-436e-9726-9abe60210728

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll mozilla::dom::PWindowGlobalParent::SendDrawSnapshot ipc/ipdl/PWindowGlobalParent.cpp:182
1 xul.dll mozilla::dom::PWindowGlobalParent::SendDrawSnapshot ipc/ipdl/PWindowGlobalParent.cpp:222
2 xul.dll mozilla::dom::WindowGlobalParent::DrawSnapshotInternal dom/ipc/WindowGlobalParent.cpp:967
3 xul.dll mozilla::gfx::CrossProcessPaint::QueuePaint gfx/ipc/CrossProcessPaint.cpp:390
4 xul.dll mozilla::gfx::CrossProcessPaint::QueuePaint gfx/ipc/CrossProcessPaint.cpp:401
5 xul.dll mozilla::gfx::CrossProcessPaint::QueueDependencies gfx/ipc/CrossProcessPaint.cpp:378
6 xul.dll mozilla::gfx::CrossProcessPaint::ReceiveFragment gfx/ipc/CrossProcessPaint.cpp:338
7 xul.dll mozilla::MozPromise<mozilla::gfx::PaintFragment, mozilla::ipc::ResponseRejectReason, 1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/dom/ipc/WindowGlobalParent.cpp:973:7', `lambda at /builds/worker/checkouts/gecko/dom/ipc/WindowGlobalParent.cpp:976:7'>::DoResolveOrRejectInternal xpcom/threads/MozPromise.h:846
8 xul.dll mozilla::MozPromise<mozilla::dom::WebAuthnGetAssertionResult, nsresult, 1>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:487
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1170
Severity: -- → S2
Flags: needinfo?(hikezoe.birchill)

This may be another source of failing OOP iframe document print. I will try to
see whether it can be reproducible locally later.

Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
Fission Milestone: --- → M8
Component: DOM: Content Processes → Graphics
Whiteboard: fission-soft-blocker
Component: Graphics → DOM: Content Processes
Priority: -- → P2
Attachment #9233483 - Attachment description: Bug 1722673 - Add a null check for the current WindowGlobalParent in QueuePaint(). r?nika → Bug 1722673 - Add a null check for the current WindowGlobalParent in QueuePaint(). r?emilio
Pushed by hikezoe.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e45261c616ac Add a null check for the current WindowGlobalParent in QueuePaint(). r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Blocks: 1722536
Flags: needinfo?(hikezoe.birchill)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: