Bug 1722673 - Add a null check for the current WindowGlobalParent in QueuePaint(). r=emilio

This may be another source of failing OOP iframe document print. I will try to
see whether it can be reproducible locally later.

Differential Revision: https://phabricator.services.mozilla.com/D121075